# rusty-notes

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  TODO.txt  docker-compose.yml  openapi.yaml
.github/workflows/: rust.yml
scripts/: run_tests.sh
src/: env.rs  main.rs
src/db/: mod.rs  root.rs
src/db/migrations/: 0001_notes_table.up.sql
src/db/models/: note.rs
src/logger/: root.rs
src/routes/: doc.rs  mod.rs  note.rs
src/test/: db_connection.rs  mod.rs  ping.rs  root.rs  utils.rs
