[package]
name = "axum-with-sqlx"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1.44.1", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
